@@ -1,0 +1,6 @@
+module.exports = {
+	on: require('./on'),
+	getOffset: require('./getOffset'),
+	getDocumentHeight: require('./getDocumentHeight'),
+	getPageScroll: require('./getPageScroll')
+}
