@@ -1,5 +1,8 @@
 intended v0.1.24
 + implement cookie.get
++ move functions from dom.js into dom/getOffset.js, dom/getPageScroll.js and dom/getDocumentHeight.js
++ implement dom.on
++ implement dom.off
 
 v0.1.23
 + rename class _init to init
